# sticknodes-rs

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  installation.html  introduction.html  nodes.html  polyfills.html  print.html  searchindex.js  stickfigures.html  toc.html  toc.js
.github/workflows/: publish-guide.yml
guide/: book.toml
guide/src/: SUMMARY.md  stickfigures.md
guide/src/nodes/: anatomy.md  bulk.md
guide/src/polyfills/: anatomy.md
guide/src/stickfigures/: anatomy.md  create-from-bytes.md  export-from-bytes.md
nodes/: anatomy.html  bulk.html  create.html  examples.html  get.html  modify.html  remove.html
polyfills/: anatomy.html  create.html  examples.html  get.html  modify.html  remove.html
src/: color.rs  error.rs  lib.rs  node.rs  node_data.rs  node_type.rs  polyfill.rs  polyfill_data.rs  stickfigure.rs  stickfigure_header.rs
src/serialization/: read.rs  write.rs
src/structs/: connector.rs  mod.rs  node.rs  polyfill.rs  stickfigure.rs
stickfigures/: anatomy.html  create-from-bytes.html  create.html  export-from-bytes.html  modify.html
